--- a/index.html
+++ b/index.html
@@ -17,63 +17,276 @@
 
 
 <body>
-  <section class="flex justify-between items-center p-4 bg-gray-800 text-white">
-    <div class="flex gap-[2.65px]">
+  <section class="mx-8 flex justify-between items-center p-4">
+    <div class="flex gap-[10px] font-bold">
       <img src="assets/logo.png" class="w-[50px] h-[50px]" alt="">
       <h1>Emergency <br> Service</h1>
     </div>
 
     <div class="flex gap-[20px] items-center">
-      <div class="flex gap-[10px]">
+      <div class="rounded-3xl py-2 px-3 font-semibold flex items-center gap-[10px] bg-green-100">
         <p id="heart">0</p>
-        <img src="assets/heart.png" class="w-[30px] h-[30px]" alt="">
+        <img src="assets/heart.png" class="w-[20px] h-[20px]" alt="">
       </div>
 
-      <div class="flex gap-[10px]">
+      <div class="rounded-3xl py-2 px-3 font-semibold flex items-center gap-[10px] bg-green-100">
         <p id="coin">100</p>
         <img src="assets/coin.png" class="w-[24px] h-[24px]" alt="">
       </div>
 
-      <div>
+      <div class="bg-green-500 px-3 py-2 rounded-3xl text-white font-semibold">
         <p><span id="copy">0</span> Copy</p>
       </div>
     </div>
   </section>
 
-  <section>
-    <div class="flex flex-col justify-center items-center gap-[11px] mt-[21px]">
-      <img src="assets/logo.png" alt="">
-      <h1>Emergency Service Directory</h1>
-      <p>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+  <section class="bg-[#013223] pt-[21px] pb-[21px]">
+    <div class="flex flex-col justify-center items-center gap-[11px]">
+      <img src="assets/logo.png" class="h-20" alt="">
+      <h1 class="text-white font-bold text-xl">Emergency Service Directory</h1>
+      <p class="text-white font-semibold">Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
         Bangladesh</p>
     </div>
   </section>
 
-  <section class="mt-[47px] bg-green-100">
-    <div class="mx-10 bg-white p-6">
-      <div>
-        <div class="flex justify-between p-2 bg-red-200 w-full rounded-s-lg">
-          <img src="assets/emergency.png" class="h-6 w-6" alt="">
-          <i class="fa-regular fa-heart"></i>
+  <section class="flex bg-green-100 pt-[47px] pb-[47px]">
+    <div class="mx-8 lg:grid lg:grid-cols-3 lg:gap-3 lg:w-[80%]">
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">National Emergency Number</h1>
+          <h4 class="text-gray-500">National Emergency</h4>
+          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">All</p>
         </div>
-        <h1 class="font-bold text-2xl">National Emergency Number</h1>
-        <h4 class="text-gray-500">National Emergency</h4>
-        <p class="font-bold mt-4 text-3xl">999</p>
-        <p class="mt-2 h-6 w-10 text-center align-middle rounded-2xl bg-slate-200 text-gray-400">All</p>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
       </div>
-      <div class="flex justify-between mt-6">
-        <div class="border-solid border-2 border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
-          <i class="fa-solid fa-copy"></i>
-          <button class="copy">Copy</button>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/police.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Police Helpline Number</h1>
+          <h4 class="text-gray-500">Police</h4>
+          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Police</p>
         </div>
-        <div class="border-solid border-2 border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
-          <i class="fa-solid fa-phone"></i>
-          <button class="call">Call</button>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid w-[50%] bg-green-500 border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/fire-service.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Fire Service Number</h1>
+          <h4 class="text-gray-500">Fire Service</h4>
+          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Fire</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/ambulance.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Ambulence Service</h1>
+          <h4 class="text-gray-500">Ambulence</h4>
+          <p class="font-bold mt-4 text-3xl">1994-999999</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Health</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Women & Child Helplline</h1>
+          <h4 class="text-gray-500">Women & Child Helplline</h4>
+          <p class="font-bold mt-4 text-3xl">109</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Help</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Anti-Corruption Helpline</h1>
+          <h4 class="text-gray-500">Anti-Corruption</h4>
+          <p class="font-bold mt-4 text-3xl">106</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Govt</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Electricity Helpline</h1>
+          <h4 class="text-gray-500">Electricity Outage</h4>
+          <p class="font-bold mt-4 text-3xl">16216</p>
+          <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Electricity</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">CU Helpline</h1>
+          <h4 class="text-gray-500">CU</h4>
+          <p class="font-bold mt-4 text-3xl">000</p>
+          <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">University</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="rounded-xl bg-white p-6">
+        <div>
+          <div class="flex justify-between items-center p-2 w-full rounded-lg">
+            <div class="bg-red-200 p-2 rounded-lg">
+              <img src="assets/emergency.png" class="h-6 w-6" alt="">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <h1 class="font-bold text-xl">Bangladesh Railway Helpline</h1>
+          <h4 class="text-gray-500">Bangladesh Railway</h4>
+          <p class="font-bold mt-4 text-3xl">163</p>
+          <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Travel</p>
+        </div>
+        <div class="flex justify-between mt-6 gap-2">
+          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-copy"></i>
+            <button class="copy">Copy</button>
+          </div>
+          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            <i class="fa-solid fa-phone"></i>
+            <button class="call">Call</button>
+          </div>
         </div>
       </div>
     </div>
-    <div>
-
+    <div class="mr-8 rounded-xl w-[30%] bg-white">
+      <div class="flex justify-between items-center mx-10 mt-10 rounded-lg">
+        <div>
+          <i class="fa-solid fa-clock-rotate-left"></i>
+          <span class="font-semibold">History</span>
+        </div>
+        <div class="bg-green-500 px-5 py-2 rounded-3xl">
+          <button class="font-semibold">Clear</button>
+        </div>
+      </div>
     </div>
   </section>
 </body>
