heart, copy button functionality done

--- a/index.html
+++ b/index.html
@@ -44,235 +44,253 @@
     <div class="flex flex-col justify-center items-center gap-[11px]">
       <img src="assets/logo.png" class="h-20" alt="">
       <h1 class="text-white font-bold text-xl">Emergency Service Directory</h1>
-      <p class="text-white font-semibold">Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+      <p class="text-white font-semibold">Government Emergency Services at Your Fingertip – A Project by Government of
+        the People’s Republic of
         Bangladesh</p>
     </div>
   </section>
 
   <section class="flex bg-green-100 pt-[47px] pb-[47px]">
     <div class="mx-8 lg:grid lg:grid-cols-3 lg:gap-3 lg:w-[80%]">
-
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">National Emergency Number</h1>
           <h4 class="text-gray-500">National Emergency</h4>
-          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">All</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/police.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Police Helpline Number</h1>
           <h4 class="text-gray-500">Police</h4>
-          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Police</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid w-[50%] bg-green-500 border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid w-[50%] bg-green-500 border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/fire-service.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Fire Service Number</h1>
           <h4 class="text-gray-500">Fire Service</h4>
-          <p class="font-bold mt-4 text-3xl">999</p>
+          <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Fire</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/ambulance.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Ambulence Service</h1>
           <h4 class="text-gray-500">Ambulence</h4>
-          <p class="font-bold mt-4 text-3xl">1994-999999</p>
+          <p class="text-copy font-bold mt-4 text-3xl">1994-999999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Health</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Women & Child Helplline</h1>
           <h4 class="text-gray-500">Women & Child Helplline</h4>
-          <p class="font-bold mt-4 text-3xl">109</p>
+          <p class="text-copy font-bold mt-4 text-3xl">109</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Help</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Anti-Corruption Helpline</h1>
           <h4 class="text-gray-500">Anti-Corruption</h4>
-          <p class="font-bold mt-4 text-3xl">106</p>
+          <p class="text-copy font-bold mt-4 text-3xl">106</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Govt</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Electricity Helpline</h1>
           <h4 class="text-gray-500">Electricity Outage</h4>
-          <p class="font-bold mt-4 text-3xl">16216</p>
+          <p class="text-copy font-bold mt-4 text-3xl">16216</p>
           <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Electricity</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">CU Helpline</h1>
           <h4 class="text-gray-500">CU</h4>
-          <p class="font-bold mt-4 text-3xl">000</p>
+          <p class="text-copy font-bold mt-4 text-3xl">000</p>
           <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">University</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
 
-      <div class="rounded-xl bg-white p-6">
+      <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
             <div class="bg-red-200 p-2 rounded-lg">
               <img src="assets/emergency.png" class="h-6 w-6" alt="">
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
           <h1 class="font-bold text-xl">Bangladesh Railway Helpline</h1>
           <h4 class="text-gray-500">Bangladesh Railway</h4>
-          <p class="font-bold mt-4 text-3xl">163</p>
+          <p class="text-copy font-bold mt-4 text-3xl">163</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Travel</p>
         </div>
         <div class="flex justify-between mt-6 gap-2">
-          <div class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
-            <button class="copy">Copy</button>
+            <button>Copy</button>
           </div>
-          <div class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+          <div
+            class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
-            <button class="call">Call</button>
+            <button>Call</button>
           </div>
         </div>
       </div>
@@ -289,6 +307,9 @@
       </div>
     </div>
   </section>
+
+  <script src="js/functionalities.js">
+  </script>
 </body>
 
 </html>
