all functionalities done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">National Emergency Number</h1>
+          <h1 class="service-name font-bold text-xl">National Emergency Number</h1>
           <h4 class="text-gray-500">National Emergency</h4>
           <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">All</p>
@@ -72,7 +72,7 @@
             <button>Copy</button>
           </div>
           <div
-            class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
             <button>Call</button>
           </div>
@@ -87,7 +87,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Police Helpline Number</h1>
+          <h1 class="service-name font-bold text-xl">Police Helpline Number</h1>
           <h4 class="text-gray-500">Police</h4>
           <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Police</p>
@@ -114,7 +114,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Fire Service Number</h1>
+          <h1 class="service-name font-bold text-xl">Fire Service Number</h1>
           <h4 class="text-gray-500">Fire Service</h4>
           <p class="text-copy font-bold mt-4 text-3xl">999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Fire</p>
@@ -141,7 +141,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Ambulence Service</h1>
+          <h1 class="service-name font-bold text-xl">Ambulence Service</h1>
           <h4 class="text-gray-500">Ambulence</h4>
           <p class="text-copy font-bold mt-4 text-3xl">1994-999999</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Health</p>
@@ -168,7 +168,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Women & Child Helplline</h1>
+          <h1 class="service-name font-bold text-xl">Women & Child Helplline</h1>
           <h4 class="text-gray-500">Women & Child Helplline</h4>
           <p class="text-copy font-bold mt-4 text-3xl">109</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Help</p>
@@ -195,7 +195,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Anti-Corruption Helpline</h1>
+          <h1 class="service-name font-bold text-xl">Anti-Corruption Helpline</h1>
           <h4 class="text-gray-500">Anti-Corruption</h4>
           <p class="text-copy font-bold mt-4 text-3xl">106</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Govt</p>
@@ -222,7 +222,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Electricity Helpline</h1>
+          <h1 class="service-name font-bold text-xl">Electricity Helpline</h1>
           <h4 class="text-gray-500">Electricity Outage</h4>
           <p class="text-copy font-bold mt-4 text-3xl">16216</p>
           <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Electricity</p>
@@ -249,7 +249,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">CU Helpline</h1>
+          <h1 class="service-name font-bold text-xl">CU Helpline</h1>
           <h4 class="text-gray-500">CU</h4>
           <p class="text-copy font-bold mt-4 text-3xl">000</p>
           <p class="mt-2 p-1 w-[30%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">University</p>
@@ -276,7 +276,7 @@
             </div>
             <i class="heart-icon fa-regular fa-heart"></i>
           </div>
-          <h1 class="font-bold text-xl">Bangladesh Railway Helpline</h1>
+          <h1 class="service-name font-bold text-xl">Bangladesh Railway Helpline</h1>
           <h4 class="text-gray-500">Bangladesh Railway</h4>
           <p class="text-copy font-bold mt-4 text-3xl">163</p>
           <p class="mt-2 p-1 w-[20%] text-center align-middle rounded-2xl bg-slate-200 text-gray-600">Travel</p>
@@ -304,6 +304,9 @@
         <div class="bg-green-500 px-5 py-2 rounded-3xl">
           <button class="font-semibold">Clear</button>
         </div>
+      </div>
+      <div>
+        <ul id="call-history" class="list-none"></ul>
       </div>
     </div>
   </section>
