--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <i class="fa-solid fa-clock-rotate-left"></i>
           <span class="font-semibold">History</span>
         </div>
-        <div class="bg-green-500 px-5 py-2 rounded-3xl">
+        <div class="clear-button bg-green-500 px-5 py-2 rounded-3xl">
           <button class="font-semibold">Clear</button>
         </div>
       </div>
