--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 
 <body>
-  <section class="mx-8 flex justify-between items-center p-4">
-    <div class="flex gap-[10px] font-bold">
+  <section class="mx-8 md:flex md:justify-between md:items-center p-4">
+    <div class="md:flex flex justify-center gap-[10px] font-bold">
       <img src="assets/logo.png" class="w-[50px] h-[50px]" alt="">
       <h1>Emergency <br> Service</h1>
     </div>
 
-    <div class="flex gap-[20px] items-center">
+    <div class="md:flex flex justify-between mt-5 gap-[20px] items-center">
       <div class="rounded-3xl py-2 px-3 font-semibold flex items-center gap-[10px] bg-green-100">
         <p id="heart">0</p>
         <img src="assets/heart.png" class="w-[20px] h-[20px]" alt="">
@@ -44,14 +44,14 @@
     <div class="flex flex-col justify-center items-center gap-[11px]">
       <img src="assets/logo.png" class="h-20" alt="">
       <h1 class="text-white font-bold text-xl">Emergency Service Directory</h1>
-      <p class="text-white font-semibold">Government Emergency Services at Your Fingertip – A Project by Government of
+      <p class="text-white font-semibold mx-8">Government Emergency Services at Your Fingertip – A Project by Government of
         the People’s Republic of
         Bangladesh</p>
     </div>
   </section>
 
-  <section class="flex bg-green-100 pt-[47px] pb-[47px]">
-    <div class="mx-8 lg:grid lg:grid-cols-3 lg:gap-3 lg:w-[80%]">
+  <section class="md:flex bg-green-100 pt-[47px] pb-[47px]">
+    <div class="mx-8 space-y-4 md:grid md:grid-cols-3 md:gap-3 md:w-[80%]">
       <div class="card rounded-xl bg-white p-6">
         <div>
           <div class="flex justify-between items-center p-2 w-full rounded-lg">
@@ -283,20 +283,20 @@
         </div>
         <div class="flex justify-between mt-6 gap-2">
           <div
-            class="border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            class="copy border-solid border-2 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-copy"></i>
             <button>Copy</button>
           </div>
           <div
-            class="border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
+            class="call border-solid bg-green-500 w-[50%] border-gray-300 p-2 rounded-lg flex gap-[5px] justify-center items-center">
             <i class="fa-solid fa-phone"></i>
             <button>Call</button>
           </div>
         </div>
       </div>
     </div>
-    <div class="mr-8 rounded-xl w-[30%] bg-white">
-      <div class="flex justify-between items-center mx-10 mt-10 rounded-lg">
+    <div class="mx-8 md:mr-8 mt-10 md:p-0 md:mt-0 p-6 rounded-xl md:w-[30%] bg-white">
+      <div class="flex justify-between items-center md:mx-10 md:mt-10 rounded-lg">
         <div>
           <i class="fa-solid fa-clock-rotate-left"></i>
           <span class="font-semibold">History</span>
